--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       PGDATA: /var/lib/postgresql/data
 
   ta:
-          #image: ta-teep_ta
-    build: ../Asclepios-TrustedAuthority
+    image: uowcpc/asclepios-ta:dev_sgx
+          #build: ../Asclepios-TrustedAuthority
     container_name: ta
     ports:
       - "8000:8000"
@@ -31,6 +31,8 @@ services:
       - ../Asclepios-TrustedAuthority:/TA
     environment:
       DJANGO_LOGLEVEL: ${TA_DJANGO_LOGLEVEL}
+      DJANGO_DEBUG: ${TA_DJANGO_DEBUG}
+      DJANGO_SECRET_KEY: ${TA_DJANGO_SECRET_KEY}
       DB_NAME: ${TA_DB_NAME}
       DB_USER: ${TA_DB_USER}
       DB_PASSWORD: ${TA_DB_PASSWORD}
@@ -38,18 +40,15 @@ services:
       DB_PORT: ${TA_DB_PORT}
       ALLOWED_HOSTS: ${TA_ALLOWED_HOSTS}
       HASH_LENGTH: ${TA_HASH_LENGTH}
-      SALT: ${TA_SALT}
       IV: ${TA_IV}
-      ITER: ${TA_ITER}
       MODE: ${TA_MODE}
       KS: ${TA_KS}
-      DJANGO_DEBUG: ${TA_DJANGO_DEBUG}
       TEEP_SERVER: ${TA_TEEP_SERVER}
       SGX: ${TA_SGX}
 
   teep-server:
-          #image: ta-teep_teep-server
-    build: ../teep-deployer
+    image: registry.gitlab.com/asclepios-project/teep-deployer
+          #build: ../teep-deployer
     container_name: teep-server
     ports:
       - "5683:5683"
@@ -108,44 +107,48 @@ services:
       MINIO_EXPIRE_PUT: ${MINIO_EXPIRE_PUT}
 
   sse-client:
-          #image: uowcpc/asclepios-client:0.2
-      build: ../Asclepios-Client
-      container_name: client
-      ports:
-        - "80:80"
-      expose:
-        - "80"
-      networks:
-        - asclepios
-      depends_on:
-        - sse
-        - ta
-      environment:
-        ALLOWED_HOSTS: ${SSE_CLIENT_ALLOWED_HOSTS}
-        DJANGO_DEBUG: ${SSE_CLIENT_DJANGO_DEBUG}
-        TA_URL: ${SSE_CLIENT_TA_URL}
-        SSE_URL: ${SSE_CLIENT_SSE_URL}
-        SALT: ${SSE_CLIENT_SALT}
-        IV: ${SSE_CLIENT_IV}
-        ITER: ${SSE_CLIENT_ITER}
-        KS: ${SSE_CLIENT_KS}
-        TS: ${SSE_CLIENT_TS}
-        MODE: ${SSE_CLIENT_MODE}
-        ADATA: ${SSE_CLIENT_ADATA}
-        ADATA_LEN: ${SSE_CLIENT_ADATA_LEN}
-        HASH_LEN: ${SSE_CLIENT_HASH_LEN}
-        CHUNK_SIZE: ${SSE_CLIENT_CHUNK_SIZE}
-        NO_CHUNKS_PER_UPLOAD: ${SSE_CLIENT_NO_CHUNKS_PER_UPLOAD}
-        SALT_TA: ${SSE_CLIENT_SALT_TA}
-        IV_TA: ${SSE_CLIENT_IV_TA}
-        ITER_TA: ${SSE_CLIENT_ITER_TA}
-        KS_TA: ${SSE_CLIENT_KS_TA}
-        TS_TA: ${SSE_CLIENT_TS_TA}
-        MODE_TA: ${SSE_CLIENT_MODE_TA}
-        ADATA_TA: ${SSE_CLIENT_ADATA_TA}
-        DATA_LEN_TA: ${SSE_CLIENT_ADATA_LEN_TA}
-        SGX_ENABLE: ${SSE_CLIENT_SGX_ENABLE}
-  
+    image: uowcpc/asclepios-client:dev_sgx
+          #build: ../Asclepios-Client
+    container_name: client
+    ports:
+      - "80:80"
+    expose:
+      - "80"
+    networks:
+      - asclepios
+    depends_on:
+      - sse
+      - ta
+      - minio
+    environment:
+      ALLOWED_HOSTS: ${SSE_CLIENT_ALLOWED_HOSTS}
+      DJANGO_DEBUG: ${SSE_CLIENT_DJANGO_DEBUG}
+      DJANGO_SECRET_KEY: ${SSE_CLIENT_DJANGO_SECRET_KEY}
+      TA_URL: ${SSE_CLIENT_TA_URL}
+      SSE_URL: ${SSE_CLIENT_SSE_URL}
+      SALT: ${SSE_CLIENT_SALT}
+      IV: ${SSE_CLIENT_IV}
+      ITER: ${SSE_CLIENT_ITER}
+      KS: ${SSE_CLIENT_KS}
+      TS: ${SSE_CLIENT_TS}
+      MODE: ${SSE_CLIENT_MODE}
+      ADATA: ${SSE_CLIENT_ADATA}
+      ADATA_LEN: ${SSE_CLIENT_ADATA_LEN}
+      HASH_LEN: ${SSE_CLIENT_HASH_LEN}
+      CHUNK_SIZE: ${SSE_CLIENT_CHUNK_SIZE}
+      NO_CHUNKS_PER_UPLOAD: ${SSE_CLIENT_NO_CHUNKS_PER_UPLOAD}
+      SALT_TA: ${SSE_CLIENT_SALT_TA}
+      IV_TA: ${SSE_CLIENT_IV_TA}
+      ITER_TA: ${SSE_CLIENT_ITER_TA}
+      KS_TA: ${SSE_CLIENT_KS_TA}
+      TS_TA: ${SSE_CLIENT_TS_TA}
+      MODE_TA: ${SSE_CLIENT_MODE_TA}
+      ADATA_TA: ${SSE_CLIENT_ADATA_TA}
+      DATA_LEN_TA: ${SSE_CLIENT_ADATA_LEN_TA}
+      SGX_ENABLE: ${SSE_CLIENT_SGX_ENABLE}
+      CP_ABE_URL: ${SSE_CLIENT_CP_ABE_URL}
+      DEBUG: ${SSE_CLIENT_DEBUG}
+
   minio:
     image: minio/minio
     volumes:
