update .env template

--- a/template_nonsgx.env
+++ b/template_nonsgx.env
@@ -1,40 +1,42 @@
-TA_DJANGO_LOGLEVEL=DEBUG
+TA_DJANGO_LOGLEVEL=LOG_LEVEL_HERE
 TA_DB_NAME=tadb
-TA_DB_USER=DATABASE_USER_HERE
-TA_DB_PASSWORD=DATABASE_USER_PASSWORD_HERE
+TA_DJANGO_SECRET_KEY=TA_DJANGO_SECRET_KEY_HERE
+TA_DB_USER=TA_DATABASE_USER_HERE
+TA_DB_PASSWORD=TA_DATABASE_USER_PASSWORD_HERE
 TA_DB_HOST=ta-db
 TA_DB_PORT=5432
-TA_ALLOWED_HOSTS=*
+TA_ALLOWED_HOSTS=LIST_OF_ALLOWED_HOSTS_SEPARATED_BY_WHITESPACE_HERE
 TA_HASH_LENGTH=256
 TA_IV=TA_IV_VALUE_IN_UTF8_HERE
 TA_MODE=ccm
 TA_KS=256
-TA_DJANGO_DEBUG=True
+TA_DJANGO_DEBUG=True_OR_False_HERE
 TA_TEEP_SERVER=
 TA_SGX=0
 
-SSE_SERVER_DJANGO_LOGLEVEL=DEBUG
+SSE_SERVER_DJANGO_LOGLEVEL=LOG_LEVEL_HERE
+SSE_SERVER_ALLOWED_HOSTS=LIST_OF_ALLOWED_HOSTS_SEPARATED_BY_WHITESPACE_HERE
+SSE_SERVER_DJANGO_DEBUG=True_OR_False_HERE
 SSE_SERVER_TA_SERVER=http://ta:8000
 SSE_SERVER_DB_NAME=ssedb
 SSE_SERVER_DB_USER=SSE_SERVER_DATABASE_USER_NAME_HERE
 SSE_SERVER_DB_PASSWORD=SSE_SERVER_DATABASE_USER_PASSWORD_HERE
 SSE_SERVER_DB_HOST=sse-db
 SSE_SERVER_DB_PORT=5432
-SSE_SERVER_ALLOWED_HOSTS=*
-SSE_SERVER_DJANGO_DEBUG=True
 
 MINIO_ACCESS_KEY=MINIO_ACCESS_KEY_HERE
 MINIO_SECRET_KEY=MINIO_SECRET_KEY_HERE
-MINIO_BUCKET_NAME=asclepios
-MINIO_URL=minio:9000
-MINIO_SSL_SECURE=False
+MINIO_BUCKET_NAME=MINIO_BUCKET_NAME_HERE
+MINIO_URL=MINIO_SERVER_IP_ADDRESS_HERE:9000
+MINIO_SSL_SECURE=True_OR_False_HERE
 MINIO_EXPIRE_GET=1
 MINIO_EXPIRE_PUT=1
 
-SSE_CLIENT_ALLOWED_HOSTS=*
-SSE_CLIENT_DJANGO_DEBUG=true
-SSE_CLIENT_TA_URL=http://SSE_TA_IP_HERE:8000
-SSE_CLIENT_SSE_URL=http://SSE_SERVER_IP_HERE:8080
+SSE_CLIENT_ALLOWED_HOSTS=LIST_OF_ALLOWED_HOSTS_SEPARATED_BY_WHITESPACE_HERE
+SSE_CLIENT_DJANGO_DEBUG=True_OR_False_HERE
+SSE_CLIENT_DJANGO_SECRET_KEY=SSE_CLIENT_DJANGO_SECRET_KEY_HERE
+SSE_CLIENT_TA_URL=http://SSE_TA_IP_ADDRESS_HERE:8000
+SSE_CLIENT_SSE_URL=http://SSE_SERVER_IP_ADDRESS_HERE:8080
 SSE_CLIENT_SALT=SALT_VALUE_IN_BASE64_HERE
 SSE_CLIENT_IV=IV_VALUE_IN_BASE64_HERE
 SSE_CLIENT_ITER=10000
@@ -54,4 +56,6 @@ SSE_CLIENT_TS_TA=64
 SSE_CLIENT_MODE_TA=ccm
 SSE_CLIENT_ADATA_TA=""
 SSE_CLIENT_ADATA_LEN_TA=0
-SSE_CLIENT_SGX_ENABLE=false
+SSE_CLIENT_SGX_ENABLE=true_OR_false_here
+SSE_CLIENT_CP_ABE_URL=CP_ABE_SERVER_URL_HERE
+SSE_CLIENT_DEBUG=true_OR_false
