fix: SSE_SERVER_ALLOWED_HOST

--- a/example.env
+++ b/example.env
@@ -15,7 +15,7 @@ TA_TEEP_SERVER=coap://teep-server:5683/teep
 TA_SGX=0
 
 SSE_SERVER_DJANGO_LOGLEVEL=DEBUG
-SSE_SERVER_ALLOWED_HOSTS="51.145.96.96 server"
+SSE_SERVER_ALLOWED_HOSTS="51.145.96.96 sse"
 SSE_SERVER_DJANGO_DEBUG=True
 SSE_SERVER_DJANGO_SECRET_KEY="kl#rqhxq^m8s@vcve3o2-r7@vun^)=&8o+h@15+n9m-*6_v6k)"
 SSE_SERVER_TA_SERVER=http://ta:8000
