add more environmental variables for sse client

--- a/template_nonsgx.env
+++ b/template_nonsgx.env
@@ -59,3 +59,5 @@ SSE_CLIENT_ADATA_LEN_TA=0
 SSE_CLIENT_SGX_ENABLE=false
 SSE_CLIENT_CP_ABE_URL=CP_ABE_SERVER_URL_HERE
 SSE_CLIENT_DEBUG=true_OR_false
+SSE_CLIENT_AUTH=true_OR_false_HERE
+SSE_CLIENT_SMALL_FILE=NUMBER_OF_BYTES_HERE
